NLP TP/texts/robotics/robotics.stackexchange_0000087178.txt
Q:

Is the tutorial to compile Tiago with ROS Kinetic working?

Hi all,
I've tried to compile Tiago with ROS Kinetic by following the official tutorial wiki.ros.org/Robots/TIAGo/kinetic_install, but I'm having problems.
The error is:
Starting  >>> diff_drive_controller                                                                                                                                      

__________________________________________________________________________________
Errors     << diff_drive_controller:make /home/ubuntu/tiago_public_ws/logs/diff_drive_controller/build.make.000.log                                                      
In file included from /opt/ros/kinetic/include/controller_manager/controller_manager.h:36:0,
                 from /home/ubuntu/tiago_public_ws/src/ros_controllers/diff_drive_controller/test/diffbot.cpp:35:
/opt/ros/kinetic/include/controller_manager/controller_spec.h:56:25: error: ‘ControllerBaseSharedPtr’ in namespace ‘controller_interface’ does not name a type
   controller_interface::ControllerBaseSharedPtr c;
                         ^
In file included from /opt/ros/kinetic/include/controller_manager/controller_manager.h:54:0,
                 from /home/ubuntu/tiago_public_ws/src/ros_controllers/diff_drive_controller/test/diffbot.cpp:35:
/opt/ros/kinetic/include/controller_manager/controller_loader_interface.h:49:33: error: ‘ControllerBaseSharedPtr’ in namespace ‘controller_interface’ does not name a type
   virtual controller_interface::ControllerBaseSharedPtr createInstance(const std::string& lookup_name) = 0;
                                 ^
make[2]: *** [CMakeFiles/diffbot.dir/test/diffbot.cpp.o] Error 1
make[1]: *** [CMakeFiles/diffbot.dir/all] Error 2
make: *** [all] Error 2
cd /home/ubuntu/tiago_public_ws/build/diff_drive_controller; catkin build --get-env diff_drive_controller | catkin env -si  /usr/bin/make --jobserver-fds=6,7 -j; cd -
...................................................
Failed     << diff_drive_controller:make                                 [ Exited with code 2 ]                                                                          
Failed    <<< diff_drive_controller                                      [ 7.8 seconds ]                                                                                 
Abandoned <<< four_wheel_steering_controller                             [ Unrelated job failed ]                                                                        
Abandoned <<< gripper_action_controller                                  [ Unrelated job failed ]                                                                        
Abandoned <<< joint_trajectory_controller                                [ Unrelated job failed ]                                                                        
Abandoned <<< rqt_controller_manager                                     [ Unrelated job failed ]                                                                        
Abandoned <<< gazebo_ros_control                                         [ Unrelated job failed ]                                                                        
Abandoned <<< effort_controllers                                         [ Unrelated job failed ]                                                                        
Abandoned <<< position_controllers                                       [ Unrelated job failed ]                                                                        
Abandoned <<< velocity_controllers                                       [ Unrelated job failed ]                                                                        
Abandoned <<< tiago_2dnav                                                [ Unrelated job failed ]                                                                        
Abandoned <<< pmb2_description                                           [ Unrelated job failed ]                                                                        
Abandoned <<< combined_robot_hw_tests                                    [ Unrelated job failed ]                                                                        
Abandoned <<< pal_gripper                                                [ Unrelated job failed ]                                                                        
Abandoned <<< pal_gripper_controller_configuration                       [ Unrelated job failed ]                                                                        
Abandoned <<< pal_gripper_gazebo                                         [ Unrelated job failed ]                                                                        
Abandoned <<< pmb2_bringup                                               [ Unrelated job failed ]                                                                        
Abandoned <<< pmb2_controller_configuration                              [ Unrelated job failed ]                                                                        
Abandoned <<< pmb2_gazebo                                                [ Unrelated job failed ]                                                                        
Abandoned <<< play_motion                                                [ Unrelated job failed ]                                                                        
Abandoned <<< tiago_2dnav_gazebo                                         [ Unrelated job failed ]                                                                        
Abandoned <<< tiago_bringup                                              [ Unrelated job failed ]                                                                        
Abandoned <<< tiago_controller_configuration_gazebo                      [ Unrelated job failed ]                                                                        
Abandoned <<< tiago_description                                          [ Unrelated job failed ]                                                                        
Abandoned <<< tiago_gazebo                                               [ Unrelated job failed ]                                                                        
Abandoned <<< tiago_multi                                                [ Unrelated job failed ]                                                                        
Abandoned <<< pal_hardware_gazebo                                        [ Unrelated job failed ]                                                                        

And the summary at the end is:
..................................
Finished  <<< controller_manager_tests                                   [ 19.7 seconds ]                                                                                
[build] Summary: 70 of 96 packages succeeded.                                                                                                                            
[build]   Ignored:   9 packages were skipped or are blacklisted.                                                                                                         
[build]   Warnings:  14 packages succeeded with warnings.                                                                                                                
[build]   Abandoned: 25 packages were abandoned.                                                                                                                         
[build]   Failed:    1 packages failed.                                                                                                                                  
[build] Runtime: 13 minutes and 29.4 seconds total.                                                                                                                      
[build] Note: Workspace packages have changed, please re-source setup files to use them.

I've followed that TIAGo installation kinetic - packages names? question but it didn't help me.
Does anybody know how to make it work?

Originally posted by Ruben Alves on ROS Answers with karma: 1038 on 2018-05-29
Post score: 0

A:

Hi Ruben.
We have seen that there seems to be some weird interaction with the ROS overlays.
In your workspace there should be our version of the ros_control repository, which includes among other the controller_manager package.
But from your log, it looks like it's using the version in /opt. (/opt/ros/kinetic/include/controller_manager/controller_manager.h)
While we look deeper into the issue you can remove the installed version.
Or since the failure is in a test, you could build with:
catkin build -DCATKIN_ENABLE_TESTING=0

Originally posted by Victor Lopez with karma: 651 on 2018-05-30
This answer was ACCEPTED on the original site
Post score: 0

Original comments
Comment by Ruben Alves on 2018-05-31:
Hi @Victor
It worked with catkin build -DCATKIN_ENABLE_TESTING=0. Thank you very much.
Comment by Ruben Alves on 2018-05-31:
Regarding to ros_control, before I compile, roscd ros_control brings me to /opt/ros/kinetic/share/ros_control. After the successful compilation and source ~/tiago_public_ws/devel/setup.bash, it goes to ~/tiago_public_ws/src/ros_control/ros_control

